adiciona index.html

--- a/index.html
+++ b/index.html
@@ -25,6 +25,19 @@
 				<ul>
 					<li> <a href="https://danielpinho38732.github.io/Aula05/"> Site Bruno Aleixo com uso do (CSS)</a></li>
 				</ul>
+				<li> Aula 09 (exercicios de todos os grupos)
+					<ul>
+						<li> <a href="https://diogomiguelca.github.io/1/"> exercicio do grupo 1 </a>
+						</li>
+						<li> <a href="https://diogomiguelca.github.io/2/"> exercicio do grupo 2 </a>
+						</li>
+						<li> <a href="https://danielpinho38732.github.io/Exercicio_GI3/"> exercicio 3 </a> </li>
+						<li> <a href="https://diogomiguelca.github.io/4/">Exercicio grupo4 </a>
+						</li>
+						<li> exercicio grupo5 não foi realizado </li>
+						<li> <a href="https://diogomiguelca.github.io/6/">exercicio grupo6</a>
+						</li>
+
 
 			</ul>
 		</p>
